demo-app/deployment-demo-basic-demo.yaml
# Source: basic-demo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-basic-demo
  labels:
    app.kubernetes.io/name: basic-demo
    helm.sh/chart: basic-demo-0.5.2
    app.kubernetes.io/instance: demo
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: basic-demo
      app.kubernetes.io/instance: demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: basic-demo
        app.kubernetes.io/instance: demo
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: fargle
          whenUnsatisfiable: ScheduleAnyway
      containers:
        - name: basic-demo
          image: "quay.io/fairwinds/docker-demo:1.2.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            runAsUser: 1200
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 500m
              memory: 120Mi
            requests:
              cpu: 500m
              memory: 100Mi
