demo-app/ingress-demo-basic-demo.yaml
# Source: basic-demo/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-basic-demo
  labels:
    app.kubernetes.io/name: basic-demo
    helm.sh/chart: basic-demo-0.5.2
    app.kubernetes.io/instance: demo
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx-ingress
  tls:
    - hosts:
        - "demo.sandbox.hillghost.com"
      secretName: basic-demo-tls
  rules:
    - host: "demo.sandbox.hillghost.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: demo-basic-demo
                port:
                  name: http
